<resources>
    <string name="app_name">Sponse</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_log_in">Log In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_next">Next</string>
    <string name="title_activity_login2">Log in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <!-- Strings related to Google Login -->
    <string name="google_signed_out">Signed Out</string>
    <string name="google_greeting">Hello,</string>
    <string name="login_error_title">Problem Signing In</string>
    <string name="login_error_message">Sign in failed.</string>
    <string name="menu_logout_label">Log out</string>

    <!-- Fragments -->
    <string name="title_section_inbox">Inbox</string>
    <string name="title_section_choose">\'Sponse Sombody</string>
    <string name="title_section_reactions">Reactions</string>

    <string name="title_section_friends">Friends</string>

    <string name="empty_inbox_label">No new messages</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_message">We\'re Sorry, there was an error!</string>

    <string name="friend_email_not_found">We\'re Sorry, This email is not in our database.</string>

    <string name="error_title">Error</string>
    <string name="find_friend_by_label">Find Friend By:</string>
    <string name="find_button">Find!</string>
    <string name="menu_add_friends_label">Add Friends</string>
    <string name="friend_added">has been added!</string>
    <string name="choose_sponse_format">Choose Format</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external
        storage.
    </string>
    <string name="general_error">Sorry, there was an error!</string>

    <string name="upload_complete">Upload Complete</string>

    <string-array name="sponse_choices">
        <item>Send Message</item>
        <item>Send Photo</item>
        <item>Send Video</item>
    </string-array>

    <!-- Camera2Video -->
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">This sample demonstrates how to record video using Camera2 API.</string>

    <string name="stopRecordingButton">Finished Response</string>

</resources>
