<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".UI.MainActivity">
    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="100"
        android:title="@string/menu_logout_label"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_add_friends"
        android:orderInCategory="100"
        android:title="@string/menu_add_friends_label"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_edit_friends"
        android:orderInCategory="100"
        android:title="@string/menu_edit_friends_label"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
